limpeza de codigo

--- a/app/index.html
+++ b/app/index.html
@@ -62,7 +62,7 @@
                                 </div>
                             </li>
                        </ul>
-                       <button ng-if="!(tasks | filter:{status:0}).length" type="button" class="btn btn-primary btn-block w-100 mt-4" ng-click="randomTask()"><i class="fa fa-box-open" aria-hidden="true"></i> Estou sem tarefas</button>
+                       <button ng-if="!(tasks | filter:{status:0}).length" type="button" class="btn btn-primary btn-block w-100 mt-4" ng-click="randomTask()"><i class="fa fa-dog" aria-hidden="true"></i> Estou sem tarefas</button>
                     </div>
 
                 </div>
